test/Fail/Polarity-pragma-with-too-many-polarities.agda
postulate
  A : Set

{-# POLARITY A ++ #-}
