test/Fail/Polarity-pragma-with-too-many-polarities.err
Polarity-pragma-with-too-many-polarities.agda:2.3-10: error: [TooManyPolarities]
Too many polarities given in the POLARITY pragma for A (at most 0
allowed).
